--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: 68810cdaf9c1de57e6b70519e07fbeac4b976a38
-          GIST_ID: f1f45db70f51375da5d7e9be5939291d
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIST_ID: ${{ secrets.GIST_ID }}
           LOCALE: ko-KR
